Bugfix Columns and headings mis-aligned

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -150,7 +150,7 @@ textarea {
   border: 1px solid $muted-border;
   border-radius: 5px;
   outline: none;
-  width: 90%;
+  width: 95%;
 }
 
 input[type=submit] {
